# insurance-transfer

./: README.md  pyproject.toml
notebooks/: demo_insurance_transfer.py
src/insurance_transfer/: __init__.py  cann_transfer.py  diagnostic.py  gbm_transfer.py  glm_transfer.py  pipeline.py  shift.py
tests/: test_cann_transfer.py  test_diagnostic.py  test_gbm_transfer.py  test_glm_transfer.py  test_pipeline.py  test_shift.py
