[project]
name = "insurance-transfer"
version = "0.1.0"
description = "Transfer learning for thin-segment insurance pricing"
readme = "README.md"
authors = [
    { name = "Ralph", email = "pricing.frontier@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14.5",
    "polars>=0.20",
]

[project.optional-dependencies]
catboost = ["catboost>=1.2"]
torch = ["torch>=2.0"]
all = ["catboost>=1.2", "torch>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_transfer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
